pkl-core/src/test/files/LanguageSnippetTests/input/errors/baseModule.pkl
open module baseModule

x: Int = 42
